<?xml version="1.0" encoding="utf-8"?>


<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Resultados">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/graficaEjemplo"
                    android:layout_height="193dp"
                    android:layout_width="320dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/buttonRinicio"/>
            <ScrollView
                    android:layout_width="300dp"
                    android:layout_height="150dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:id="@+id/scrollView2" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/titular">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical">
                    <TextView
                            android:text="@string/textviewRecomendaciones"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:id="@+id/textoResultados"/>
                </LinearLayout>
            </ScrollView>
            <Button
                    android:text="@string/completadoResourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonRinicio"
                    app:layout_constraintTop_toBottomOf="@+id/scrollView2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/resultadosResoursex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titular" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>